--- a/docker/Dockerfile-Webapp
+++ b/docker/Dockerfile-Webapp
@@ -3,8 +3,8 @@
 FROM clearlinux:latest
 
 # Get python requirements for application
-#ADD https://raw.githubusercontent.com/clearlinux/telemetrics-backend/latest/requirements.txt /tmp/requirements.txt
-ADD requirements.txt /tmp/requirements.txt
+ADD https://raw.githubusercontent.com/alexjch/telemetrics-backend/latest/requirements.txt /tmp/requirements.txt
+#ADD requirements.txt /tmp/requirements.txt
 
 # Install dependencies
 RUN swupd bundle-add sudo uwsgi python-basic curl
@@ -14,15 +14,15 @@ RUN pip3 install -r /tmp/requirements.txt
 
 # Install application
 RUN mkdir -p /var/www \
-    && curl -sL https://github.com/clearlinux/telemetrics-backend/archive/latest.tar.gz \
+    && curl -sL https://github.com/alexjch/telemetrics-backend/archive/latest.tar.gz \
     | tar -xz --directory /var/www \
     && mkdir /var/www/telemetrics-backend-latest/telemetryui/uwsgi-spool
 
 # Add entrypoint command
 COPY entrypoint.sh /var/www/telemetrics-backend-latest/
 
-# TODO: Remove following line when this patch goes out
-COPY config_local.py /var/www/telemetrics-backend-latest/telemetryui/telemetryui/.
+# Copy configuration
+COPY config.py /var/www/telemetrics-backend-latest/telemetryui/telemetryui/.
 
 # New user
 RUN useradd --system webapp --uid 9999
