--- a/docker/config.py.template
+++ b/docker/config.py.template
@@ -14,6 +14,9 @@
 # limitations under the License.
 #
 
+# This configuration file can be used for a local development debug server
+# at localhost:5000. Overrides the config module.
+
 import logging
 
 
@@ -21,14 +24,24 @@ class Config(object):
     DEBUG = False
     TESTING = False
     LOG_LEVEL = logging.ERROR
-    SQLALCHEMY_DATABASE_URI = 'postgres://postgres:@@db_password@@@localhost/telemetry'
-    SQLALCHEMY_TRACK_MODIFICATIONS = True
+
+    # If your telemetry database password is not 'postgres', update this line.
+    SQLALCHEMY_DATABASE_URI = 'postgres://postgres:postgres@localhost/telemetry'
+
+    SQLALCHEMY_TRACK_MODIFICATIONS = False
     LOG_FILE = 'handler.log'
     WTF_CSRF_ENABLED = True
-    SECRET_KEY = '@@flask_key@@'
-    RECORDS_PER_PAGE = 50
-    MAX_RECORDS_PER_PAGE = 1000
 
+    # Generate a random key by running `head -c 32 /dev/urandom | base64 -`.
+    # The value below is an example key generated with that command.
+    SECRET_KEY = '6WbDLE0W4wON/CR7rm6P7SuI85yLCvOK02U7UeHoySQ='
+
+    # Uncomment next line to display demo plugin, the code for the view
+    # can be found under 'telemetryui/plugins/demo'
+    # PLUGINS = ['demo']
+
+    # redis host
+    REDIS_HOSTNAME = 'localhost'
 
 class Testing(Config):
     TESTING = True
