docker-compose for production and development
This change adds Dockerfiles and docker-compose files for reference for
development and production environments.

Development:
  - docker-compose.yml, docker-compose.overrides.yml
  - Dockerfile-Collector-Dev, Dockerfile-Webapp-Dev

Production:
  - docker-compose.yml, production.yml
  - Dockerfile-Collector, Dockerfile-Webapp

--- a/docker/Dockerfile-Webapp
+++ b/docker/Dockerfile-Webapp
@@ -3,23 +3,22 @@
 FROM clearlinux:latest
 
 # Get python requirements for application
-ADD https://raw.githubusercontent.com/alexjch/telemetrics-backend/latest/requirements.txt /tmp/requirements.txt
-#ADD requirements.txt /tmp/requirements.txt
+ADD https://raw.githubusercontent.com/clearlinux/telemetrics-backend/latest/requirements.txt /tmp/requirements.txt
 
 # Install dependencies
-RUN swupd bundle-add sudo uwsgi python-basic curl
+RUN swupd bundle-add --quiet sudo uwsgi python-basic curl
 
 # Install python dependencies
 RUN pip3 install -r /tmp/requirements.txt
 
 # Install application
 RUN mkdir -p /var/www \
-    && curl -sL https://github.com/alexjch/telemetrics-backend/archive/latest.tar.gz \
+    && curl -sL https://github.com/clearlinux/telemetrics-backend/archive/latest.tar.gz \
     | tar -xz --directory /var/www \
     && mkdir /var/www/telemetrics-backend-latest/telemetryui/uwsgi-spool
 
 # Add entrypoint command
-COPY entrypoint.sh /var/www/telemetrics-backend-latest/
+COPY entrypoint.sh /var/www/telemetrics-backend-latest
 
 # Copy configuration
 COPY config.py /var/www/telemetrics-backend-latest/telemetryui/telemetryui/.
@@ -28,6 +27,8 @@ COPY config.py /var/www/telemetrics-backend-latest/telemetryui/telemetryui/.
 RUN useradd --system webapp --uid 9999
 
 # Set permissions
-RUN chown -R webapp:webapp /var/www/telemetrics-backend-latest/ \
-    && chmod -R ugo-w,u+x,go-x /var/www/telemetrics-backend-latest/ \
+RUN chown -R webapp:webapp /var/www/telemetrics-backend-latest \
+    && chmod -R ugo-w,u+x,go-x /var/www/telemetrics-backend-latest \
     && chmod u+w /var/www/telemetrics-backend-latest/telemetryui/uwsgi-spool
+
+CMD ["/usr/bin/bash", "/var/www/telemetrics-backend-latest/entrypoint.sh"]
