--- a/docker/Dockerfile-Collector
+++ b/docker/Dockerfile-Collector
@@ -3,17 +3,17 @@
 FROM clearlinux:latest
 
 # Get python requirements for application
-ADD https://raw.githubusercontent.com/alexjch/telemetrics-backend/latest/requirements.txt /tmp/requirements.txt
+ADD https://raw.githubusercontent.com/clearlinux/telemetrics-backend/latest/requirements.txt /tmp/requirements.txt
 
 # Install dependencies
-RUN swupd bundle-add sudo uwsgi python-basic curl
+RUN swupd bundle-add --quiet sudo uwsgi python-basic curl
 
 # Install python dependencies
 RUN pip3 install -r /tmp/requirements.txt
 
 # Install application
 RUN mkdir -p /var/www \
-    && curl -sL https://github.com/alexjch/telemetrics-backend/archive/latest.tar.gz \
+    && curl -sL https://github.com/clearlinux/telemetrics-backend/archive/latest.tar.gz \
     | tar -xz --directory /var/www \
     && mkdir /var/www/telemetrics-backend-latest/collector/uwsgi-spool
 
@@ -29,8 +29,6 @@ RUN chown -R app:app /var/www/telemetrics-backend-latest/ \
     && chmod u+w /var/www/telemetrics-backend-latest/collector \
     && chmod u+w /var/www/telemetrics-backend-latest/collector/uwsgi-spool
 
-CMD ["uwsgi", "--http", "0.0.0.0:5001", \
-              "--uid", "app", \
-              "--chdir", "/var/www/telemetrics-backend-latest/collector/", \
-              "--module", "collector:app", \
-              "--spooler", "/var/www/telemetrics-backend-latest/collector/uwsgi-spool"]
+CMD ["uwsgi","--http","0.0.0.0:5001","--uid","app",\
+"--chdir","/var/www/telemetrics-backend-latest/collector/","--module","collector:app",\
+"--spooler","/var/www/telemetrics-backend-latest/collector/uwsgi-spool"]
