--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,41 +1,24 @@
+# Copyright © 2019 Intel Corporation
+#
+# SPDX-License-Identifier: GPL-3.0-only
 version: '3.1'
 services:
-  db:
-    image: postgres:latest
-    environment:
-       POSTGRES_DB: telemetry
-       POSTGRES_USER: postgres
-       POSTGRES_PASSWORD: postgres
   redis:
-    image: redis:latest
+    image: redis:5.0.5
   collector:
-    restart: always
-    depends_on:
-       - db
     ports:
        - 5001:5001
-    build:
-       context: ${PWD}
-       dockerfile: Dockerfile-Collector
-    image: collector/clr-telemetry:1.0
     environment:
        POSTGRES_USER: postgres
        POSTGRES_PASSWORD: postgres
        POSTGRES_HOST: db
   webapp:
-    restart: always
     depends_on:
-      - db
-      - redis
+       - redis
     ports:
-      - 5000:5000
-    build:
-       context: ${PWD}
-       dockerfile: Dockerfile-Webapp
-    image: webapp/clr-telemetry:1.0
+       - 5000:5000
     environment:
        POSTGRES_USER: postgres
        POSTGRES_PASSWORD: postgres
        POSTGRES_HOST: db
        REDIS_HOST: redis
-    command: /usr/bin/bash /var/www/telemetrics-backend-latest/entrypoint.sh
